# arduino-lint

./: DistTasks.yml  Taskfile.yml  gon.config.hcl  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: check-npm-task.yml  check-python-task.yml  deploy-cobra-mkdocs-versioned-poetry.yml  publish-go-nightly-task.yml  release-go-task.yml  test-go-task.yml
1.0/: 404.html  index.html  sitemap.xml
1.0/CONTRIBUTING/: index.html
1.0/commands/arduino-lint/: index.html
1.0/installation/: index.html
1.0/rules/: index.html
1.0/rules/package-index/: index.html
1.0/rules/platform/: index.html
1.0/rules/sketch/: index.html
42.0/: 404.html  index.html  sitemap.xml
42.0/CONTRIBUTING/: index.html
42.0/commands/arduino-lint/: index.html
42.0/installation/: index.html
42.1/: 404.html  index.html  sitemap.xml
42.1/CONTRIBUTING/: index.html
42.1/commands/arduino-lint/: index.html
42.1/installation/: index.html
42.1/search/: search_index.json
dev/: 404.html  index.html  sitemap.xml
dev/CONTRIBUTING/: index.html
dev/commands/arduino-lint/: index.html
dev/installation/: index.html
dev/search/: search_index.json
dev/siteversion/: siteversion.py
docs/: index.md  installation.md
docs/siteversion/: siteversion.py
docsgen/: go.mod  go.sum  main.go
internal/cli/: cli.go
internal/rule/rulefunction/: library_test.go
latest/: 404.html  index.html
latest/CONTRIBUTING/: index.html
latest/commands/arduino-lint/: index.html
latest/installation/: index.html
test/: test_all.py
